--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Math/;Containers/;Time/;" />
+		<Option virtualFolders="Math\;Containers\;Time\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -52,8 +52,12 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_COMMON" />
 				</Compiler>
 				<Linker>
-					<Add library="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
+					<Add library="libicudt.dll.a" />
+					<Add library="libicuuc.dll.a" />
+					<Add library="libicuin.dll.a" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
+					<Add directory="../../../../3rdparty/ICU/bin/Win32/ReleaseSharedrtDynamic/MinGW" />
 				</Linker>
 			</Target>
 			<Target title="DebugLinux32SharedrtDynamic">
@@ -112,7 +116,7 @@
 				<Linker>
 					<Add option="-m32" />
 					<Add option="-v" />
-					<Add library="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic/libQuimeraEngineCommon.so" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugMac32SharedrtDynamic\libQuimeraEngineCommon.so" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic" />
 					<Add directory="../../../../3rdparty/Boost/bin/Mac32/DebugSharedrtStatic" />
 				</Linker>
@@ -129,6 +133,7 @@
 			<Add option="-Wall" />
 			<Add directory="../../../../headers" />
 			<Add directory="../../../../3rdparty/Boost/include" />
+			<Add directory="../../../../3rdparty/ICU/include" />
 		</Compiler>
 		<Unit filename="../../../../headers/EQIntersections.h">
 			<Option virtualFolder="Math/" />
