--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
@@ -5,7 +5,7 @@
 		<Option title="Common" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Tests/;Tests/DataTypes/;Tests/General/;Tests/Memory/;TestSystem (shared)/;" />
+		<Option virtualFolders="Tests\;Tests\DataTypes\;Tests\General\;Tests\Memory\;TestSystem (shared)\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -49,7 +49,7 @@
 					<Add option="-DU_STATIC_IMPLEMENTATION" />
 				</Compiler>
 				<Linker>
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCommon.lib" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
@@ -79,7 +79,7 @@
 				</Compiler>
 				<Linker>
 					<Add library="libboost_unit_test_framework-mt-d.a" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
 					<Add library="libicuin.dll.a" />
@@ -147,6 +147,7 @@
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="icudata" />
 					<Add library="icuuc" />
+					<Add library="icuin" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugMac32SharedrtStatic" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Mac32/DebugSharedrtStatic/" />
 					<Add directory="../../../../../bin/CodeBlocks10/DebugMac32SharedrtStatic" />
@@ -175,6 +176,7 @@
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="icudata" />
 					<Add library="icuuc" />
+					<Add library="icuin" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Mac32/DebugSharedrtStatic/" />
 					<Add directory="../../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic" />
 				</Linker>
