467 - QFixedArray 002 GetIterator, GetFirst and GetLast methods for qfixedarray class

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -292,6 +292,9 @@
 		<Unit filename="../../../../tests/unit/testmodule_tools/QFixedArrayWhiteBox.h">
 			<Option virtualFolder="Tests/Containers/" />
 		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_tools/QFixedArrayTestClass.h">
+			<Option virtualFolder="Tests/Containers/" />
+		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_tools/QFixedArray_Test.cpp">
 			<Option virtualFolder="Tests/Containers/" />
 		</Unit>
