--- a/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
@@ -263,6 +263,9 @@
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\ListElementMock.h">
       <Filter>Tests\Containers</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QFixedArrayTestClass.h">
+      <Filter>Tests\Containers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\testsystem\UnitTestTemplate.txt">
